--- a/setup.cfg
+++ b/setup.cfg
@@ -9,27 +9,60 @@ author = Nabeel Seedat
 license = MIT
 license_file = LICENSE
 classifiers =
-    Programming Language :: Python :: 3
-    Topic :: Scientific/Engineering :: Artificial Intelligence
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
+    Programming Language :: Python :: 3
+    Topic :: Scientific/Engineering :: Artificial Intelligence
 keywords = data-centric AI, data quality, uncertainty
 
 [options]
-zip_safe = False
 packages = find:
-include_package_data = True
-package_dir =
-    =data_iq
-#python_requires == 3.7
-
 install_requires =
-    autograd_lib
+    autograd-lib
     numpy
     torch>=1.9.1
-    torchvision==0.11.1
-    importlib-metadata; python_version<"3.8"
-
+    torchvision>=0.11.1
+    importlib-metadata;python_version<"3.8"
+include_package_data = True
+package_dir =
+    =.
+zip_safe = False
 
 [options.packages.find]
-where = data_iq
+where = .
+
+[options.extras_require]
+testing =
+    SciencePlots
+    aum
+    autograd-lib
+    bandit
+    catboost>=1.1
+    click
+    flake8
+    ipykernel
+    isort
+    lightgbm
+    matplotlib
+    nbconvert
+    nltk
+    notebook
+    numpy
+    pandas>=1.3.5
+    pre-commit
+    protobuf>=4.21.8
+    py
+    pytest
+    pytest-benchmark
+    pytest-cov
+    pytest-xdist[psutil]
+    pytest-xprocess
+    scikit-learn>=1.0.2
+    scipy>=1.7.3
+    sdv
+    seaborn
+    tqdm
+    umap-learn
+    uq360
+    xgboost>=1.6.2
+    xlrd
